--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,11 @@
     <br>
     Contact us via email:<br>
     <a href="mailto:info@arsatelie.com">info@arsatelie.com</a>
+    <br>
+    <br>
+    <br>
+    or follow us on Instagram:
+    <a href="https://www.instagram.com/arsatelie/">arsatelie</a>
 
   </main>
 </body>
