--- a/index.html
+++ b/index.html
@@ -21,7 +21,27 @@
       |
       <a href="/contact.html">Contact</a>
     </p>
+ 
+    <br>
+    <br>
+    <br>
+    <br>
 
+    <figure>
+      <img src="images/R_Qielli_Hapur.jpg" alt="Shtëpia e Kulturës Runik">
+      <figcaption>Shtëpia e Kulturës Runik, 2025</figcaption>
+    </figure>
+
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <figure>
+      <img src="images/R_Qielli_Hapur.jpg" alt="Shtëpia e Kulturës Runik">
+      <figcaption>Shtëpia e Kulturës Runik, 2025</figcaption>
+    </figure>
+    
     <br>
     <br>
     <br>
