--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <br>
 
     <figure>
-      <img src="images/R_Qielli_Hapur.jpg" alt="Shtëpia e Kulturës Runik">
+      <img src="images/R_Axo.jpg" alt="Shtëpia e Kulturës Runik">
       <figcaption>Shtëpia e Kulturës Runik, 2025</figcaption>
     </figure>
 
