--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       |
       <a href="/contact.html">Contact</a>
     </p>
- 
+
     <br>
     <br>
     <br>
@@ -38,10 +38,10 @@
     <br>
 
     <figure>
-      <img src="images/R_Axo.jpg" alt="Shtëpia e Kulturës Runik">
+      <img src="images/R_Axo.png" alt="Shtëpia e Kulturës Runik">
       <figcaption>Shtëpia e Kulturës Runik, 2025</figcaption>
     </figure>
-    
+
     <br>
     <br>
     <br>
